--- a/packages/slack.yaml
+++ b/packages/slack.yaml
@@ -1,6 +1,6 @@
 notify:
   - name: slack
     platform: slack
-    api_key: xoxb-292393739776-MQtSTRsz0qFL9vK6cFS9JQlH
+    api_key: !secret slack_token
     default_channel: '#general'
 
