--- a/automations/outdoor_motion.yaml
+++ b/automations/outdoor_motion.yaml
@@ -10,12 +10,15 @@
     - platform: numeric_state
       entity_id:
         - sensor.captured_today_entryway
+      above: 0
+    - platform: numeric_state
+      entity_id:
         - sensor.captured_today_front
       above: 0
   action:
     - service: notify.slack
       data_template:
-        message: "Detected motion outside {{ trigger.from_state.attributes.friendly_name }}"
+        message: "Detected motion outside {{ trigger.from_state.attributes.friendly_name }} ({{ trigger.from_state }})"
     - service: input_boolean.turn_on
       entity_id: input_boolean.motion_outside
     - service: timer.cancel
@@ -102,7 +105,7 @@
     condition: 'and'
     conditions:
       - condition: state
-        entity_id: lights.outdoor
+        entity_id: light.outdoor
         state: 'on'
   action:
     - service: notify.slack
