--- a/automations/indoor_motion.yaml
+++ b/automations/indoor_motion.yaml
@@ -1,1 +1,78 @@
-[]
+- alias: Door and windows opened
+  trigger:
+    - platform: state
+      entity_id:
+        - binary_sensor.front_door
+        - binary_sensor.front_door_mini
+        - binary_sensor.back_door
+  action:
+    - service: notify.slack
+      data_template:
+        message: >
+          {{ trigger.to_state.attributes.friendly_name }} {{ trigger.to_state }} {% if is_state('trigger.to_state.state','on') %}opened{% else %}closed{% endif %}.
+
+
+# door left open warning
+- alias: Front door left opened timer
+  trigger:
+    - platform: state
+      entity_id:
+        - binary_sensor.front_door
+        - binary_sensor.front_door_mini
+      to: 'on'
+  action:
+    - service: timer.start
+      entity_id: timer.opened_front_door
+
+- alias: Back door left opened timer
+  trigger:
+    - platform: state
+      entity_id:
+        - binary_sensor.backdoor
+      to: 'on'
+  action:
+    - service: timer.start
+      entity_id: timer.opened_back_door
+
+- alias: Alert that front door has been left open
+  trigger:
+    - platform: event
+      event_type: timer.finished
+      event_data:
+        entity_id: timer.opened_front_door
+  action:
+    - service: notify.slack
+      data_template:
+        message: "Front door has been left opened."
+
+- alias: Alert that back door has been left open
+  trigger:
+    - platform: event
+      event_type: timer.finished
+      event_data:
+        entity_id: timer.opened_back_door
+  action:
+    - service: notify.slack
+      data_template:
+        message: "Back door has been left opened."
+
+# turn siren on if no one at home and door opened
+- alias: Front door opened when no one at home
+  trigger:
+    - platform: state
+      entity_id:
+        - binary_sensor.front_door
+        - binary_sensor.front_door_mini
+        - binary_sensor.back_door
+      to: 'on'
+  condition:
+    condition: 'and'
+    conditions:
+      - condition: state
+        entity_id: input_boolean.at_home
+        state: 'off'
+  action:
+    - service: notify.slack
+      data_template:
+        message: "DOOR OPENED AND NO ONE AT HOME"
+
